# argon-fan-manager

./: flake.nix  pyproject.toml
argon_fan_manager/: argon_fan_manager.py
